--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/setup-java@v3
         with: 
           distribution: 'temurin'
-          jave-version: '11'
+          java-version: '11'
       
 
       # Setup sonar scanner
