--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,13 +33,13 @@ jobs:
         uses: warchant/setup-sonar-scanner@v7
 
       # Run sonar scanner
-      - name: SonarQube Scan
+      - name: SonarQube scan
         run: sonar-scanner
            -Dsonar.host.url=${{ secrets.SONAR_URL }}
            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-           -Dsonar.sources=src/ 
+           -Dsonar.sources=src/
            -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ 
            -Dsonar.junit.reportsPaths=target/surefire-reports/ 
            -Dsonar.jacoco.reportsPaths=target/jacoco.exec
