--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
              -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
              -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} 
+             -Dsonar.projectName=vprofile
              -Dsonar.sources=src/
              -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/
              -Dsonar.junit.reportsPaths=target/surefire-reports/ 
