--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
     
       - name: Maven test
-        run: mvn test
+        run: mvn clean && mvn test
     
       - name: Checkstyle
         run: mvn checkstyle:checkstyle
