--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,7 @@ jobs:
              -Dsonar.junit.reportsPaths=target/surefire-reports/ 
              -Dsonar.jacoco.reportsPaths=target/jacoco.exec 
              -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
+             -Dsonar.exclusions=src/java/test/**
               
 
         # check the quality gate status
