--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
              -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
              -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} 
              -Dsonar.sources=src/
-             -Dsonar.java.binaries=**/target/classes
+             -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/
              -Dsonar.junit.reportsPaths=target/surefire-reports/ 
              -Dsonar.jacoco.reportsPaths=target/jacoco.exec 
              -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
