--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ env:
   AWS_REGION: us-east-2
   ECR_REPOSITORY: vprofileapp
   EKS_CLUSTER: vprofile-eks
-  
+
 jobs:
   Testing:
     runs-on: ubuntu-latest
@@ -70,7 +70,7 @@ jobs:
           registry: ${{ secrets.REGISTRY }}
           repo: ${{ env.ECR_REPOSITORY }}
           region:  ${{ env.AWS_REGION }}
-          auto_tag: true
+          tags: latest,${{ github.run_number}}  
           daemon_off: false
           dockerfile: ./Dockerfile
           context: ./
